src/objects/Customer_Request_Assignment_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Owner__c</fullName>
        <label>Primary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Request_Assignment_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner__c</fullName>
        <label>Secondary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Request_Assignment_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <picklist>
            <picklistValues>
                <fullName>To be defined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Customer Request Assignment Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Post_Code__c</columns>
        <columns>Primary_Owner__c</columns>
        <columns>Secondary_Owner__c</columns>
        <columns>Service__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRAR-{0000}</displayFormat>
        <label>Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Request Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>